solution ready for validation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,54 +86,24 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+/* VWB: 1/30/2023: Created benefit-icons and used instad of ...lead, brand and cost to consolidate all of the classes. */
+.benefit-icons {
     margin-bottom: 32px;
     color: #ffffff;
-}
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
 }
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-icons h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
+.benefit-icons img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 /* VWB: 1/27/2023: Changed search engine optimization to seo section to consolidate all of the classes. */
+
 .seo-section {
     margin-bottom: 20px;
     padding: 50px;
@@ -143,50 +113,14 @@ p {
     color: #ffffff;
 }
 
-/* .online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-} */
-
 .seo-section img {
     max-height: 200px;
 }
-
-/* .online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-} */
 
 .seo-section h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
-/* .online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-} */
 
 .footer {
     padding: 30px;
